✨: 자재총산출 페이지 구현